kubernetes/Deployment_apps_v1_juank1400-dev_consultas-jv.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    alpha.image.policy.openshift.io/resolve-names: '*'
    app.openshift.io/route-disabled: "false"
    app.openshift.io/vcs-ref: ""
    app.openshift.io/vcs-uri: https://github.com/soft-25-01-g4/reto2.git
    image.openshift.io/triggers: '[{"from":{"kind":"ImageStreamTag","name":"consultas-jv:latest"},"fieldPath":"spec.template.spec.containers[?(@.name==\"consultas-jv\")].image","pause":""}]'
    openshift.io/generated-by: OpenShiftWebConsole
  labels:
    app: consultas-jv
    app.kubernetes.io/component: consultas-jv
    app.kubernetes.io/instance: consultas-jv
    app.kubernetes.io/name: consultas-jv
    app.kubernetes.io/part-of: consultas
  name: consultas-jv
spec:
  progressDeadlineSeconds: 600
  replicas: 0
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: consultas-jv
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: consultas-jv
        deployment: consultas-jv
    spec:
      containers:
      - image: image-registry.openshift-image-registry.svc:5000/juank1400-dev/consultas-jv@sha256:29dc46d6922819e4261f13343e7354431c4d97e6eb42cb78ef0c50c8353a8a1f
        imagePullPolicy: Always
        name: consultas-jv
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /opt/data/
          name: votingdata
          subPath: jv
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext:
        fsGroup: 1012500000
      terminationGracePeriodSeconds: 30
      volumes:
      - name: votingdata
        persistentVolumeClaim:
          claimName: votingdata
