kubernetes/Deployment_apps_v1_juank1400-dev_consultas-py.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    alpha.image.policy.openshift.io/resolve-names: '*'
    app.openshift.io/route-disabled: "false"
    app.openshift.io/vcs-ref: ""
    app.openshift.io/vcs-uri: https://github.com/soft-25-01-g4/reto2.git
    image.openshift.io/triggers: '[{"from":{"kind":"ImageStreamTag","name":"consultas-py:latest"},"fieldPath":"spec.template.spec.containers[?(@.name==\"consultas-py\")].image","pause":""}]'
    openshift.io/generated-by: OpenShiftWebConsole
  labels:
    app: consultas-py
    app.kubernetes.io/component: consultas-py
    app.kubernetes.io/instance: consultas-py
    app.kubernetes.io/name: consultas-py
    app.kubernetes.io/part-of: consultas
    app.openshift.io/runtime: python
    app.openshift.io/runtime-version: 3.12-ubi8
  name: consultas-py
spec:
  progressDeadlineSeconds: 600
  replicas: 0
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: consultas-py
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: consultas-py
        deployment: consultas-py
    spec:
      containers:
      - image: image-registry.openshift-image-registry.svc:5000/juank1400-dev/consultas-py@sha256:0e239f058bcab5fe7dfae4bbfc42f82aad6dc5ec8ce2593df33512b3ece3bba8
        imagePullPolicy: Always
        name: consultas-py
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /opt/data/
          name: votingdata
          subPath: py
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - name: votingdata
        persistentVolumeClaim:
          claimName: votingdata
