kubernetes/Deployment_apps_v1_juank1400-dev_coordinador.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    alpha.image.policy.openshift.io/resolve-names: '*'
    app.openshift.io/connects-to: '[{"apiVersion":"apps/v1","kind":"Deployment","name":"consultas-jv"},{"apiVersion":"apps/v1","kind":"Deployment","name":"consultas-py"},{"apiVersion":"apps/v1","kind":"Deployment","name":"consultas-js"}]'
    app.openshift.io/route-disabled: "false"
    app.openshift.io/vcs-ref: ""
    app.openshift.io/vcs-uri: https://github.com/soft-25-01-g4/reto2.git
    image.openshift.io/triggers: '[{"from":{"kind":"ImageStreamTag","name":"coordinador:latest"},"fieldPath":"spec.template.spec.containers[?(@.name==\"coordinador\")].image","pause":""}]'
    openshift.io/generated-by: OpenShiftWebConsole
  labels:
    app: coordinador
    app.kubernetes.io/component: coordinador
    app.kubernetes.io/instance: coordinador
    app.kubernetes.io/name: coordinador
    app.kubernetes.io/part-of: consultas
  name: coordinador
spec:
  progressDeadlineSeconds: 600
  replicas: 0
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: coordinador
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        openshift.openshift.io/restartedAt: "2025-04-08T02:33:39.399Z"
      creationTimestamp: null
      labels:
        app: coordinador
        deployment: coordinador
    spec:
      containers:
      - env:
        - name: SERVICE_URL_1
          value: http://consultas-js:5000/consulta
        - name: SERVICE_URL_2
          value: http://consultas-jv:8080/consulta
        - name: SERVICE_URL_3
          value: http://consultas-py:8080/consulta
        image: image-registry.openshift-image-registry.svc:5000/juank1400-dev/coordinador@sha256:183392257e2ffab1b8cf438ae843b71c236534efcf807a8342d6f6d3ae2a4325
        imagePullPolicy: Always
        name: coordinador
        ports:
        - containerPort: 3000
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /opt/data/
          name: votingdata
          subPath: resultado
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - name: votingdata
        persistentVolumeClaim:
          claimName: votingdata
