kubernetes/Deployment_apps_v1_juank1400-dev_identidades.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    alpha.image.policy.openshift.io/resolve-names: '*'
    app.openshift.io/route-disabled: "false"
    app.openshift.io/vcs-ref: ""
    app.openshift.io/vcs-uri: https://github.com/soft-25-01-g4/reto2.git
    image.openshift.io/triggers: '[{"from":{"kind":"ImageStreamTag","name":"identidades:latest"},"fieldPath":"spec.template.spec.containers[?(@.name==\"identidades\")].image","pause":""}]'
    openshift.io/generated-by: OpenShiftWebConsole
  labels:
    app: identidades
    app.kubernetes.io/component: identidades
    app.kubernetes.io/instance: identidades
    app.kubernetes.io/name: identidades
    app.kubernetes.io/part-of: reto-2
  name: identidades
spec:
  progressDeadlineSeconds: 600
  replicas: 0
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: identidades
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: identidades
        deployment: identidades
    spec:
      containers:
      - image: image-registry.openshift-image-registry.svc:5000/juank1400-dev/identidades@sha256:2b6614bc0df79330737de7c29fd81728fba6039c7abc992e3afc72af49f9a546
        imagePullPolicy: Always
        name: identidades
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
