kubernetes/Deployment_apps_v1_juank1400-dev_myjupyternb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    alpha.image.policy.openshift.io/resolve-names: '*'
    app.openshift.io/route-disabled: "false"
    app.openshift.io/vcs-ref: ""
    app.openshift.io/vcs-uri: https://github.com/juank1400/myjupyternb.git
    image.openshift.io/triggers: '[{"from":{"kind":"ImageStreamTag","name":"myjupyternb:latest"},"fieldPath":"spec.template.spec.containers[?(@.name==\"myjupyternb\")].image","pause":""}]'
    openshift.io/generated-by: OpenShiftWebConsole
  labels:
    app: myjupyternb
    app.kubernetes.io/component: myjupyternb
    app.kubernetes.io/instance: myjupyternb
    app.kubernetes.io/name: myjupyternb
    app.kubernetes.io/part-of: Notebook
  name: myjupyternb
spec:
  progressDeadlineSeconds: 600
  replicas: 0
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: myjupyternb
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: myjupyternb
        deployment: myjupyternb
    spec:
      containers:
      - image: image-registry.openshift-image-registry.svc:5000/juank1400-dev/myjupyternb@sha256:61baea526ecb41ebf9eaab0ff9e9907d7037428a4d997f13e772d7889448d442
        imagePullPolicy: Always
        name: myjupyternb
        ports:
        - containerPort: 8888
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /home/jovyan/work/data
          name: votingdata
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - name: votingdata
        persistentVolumeClaim:
          claimName: votingdata
