kubernetes/Service__v1_juank1400-dev_consultas-js.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    app.openshift.io/vcs-ref: ""
    app.openshift.io/vcs-uri: https://github.com/soft-25-01-g4/reto2.git
    openshift.io/generated-by: OpenShiftWebConsole
  labels:
    app: consultas-js
    app.kubernetes.io/component: consultas-js
    app.kubernetes.io/instance: consultas-js
    app.kubernetes.io/name: consultas-js
    app.kubernetes.io/part-of: consultas
  name: consultas-js
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: 5000-tcp
    port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    app: consultas-js
    deployment: consultas-js
  sessionAffinity: None
  type: ClusterIP
