kubernetes/Service__v1_juank1400-dev_consultas-py.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    app.openshift.io/vcs-ref: ""
    app.openshift.io/vcs-uri: https://github.com/soft-25-01-g4/reto2.git
    openshift.io/generated-by: OpenShiftWebConsole
  labels:
    app: consultas-py
    app.kubernetes.io/component: consultas-py
    app.kubernetes.io/instance: consultas-py
    app.kubernetes.io/name: consultas-py
    app.kubernetes.io/part-of: consultas
    app.openshift.io/runtime: python
    app.openshift.io/runtime-version: 3.12-ubi8
  name: consultas-py
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: consultas-py
    deployment: consultas-py
  sessionAffinity: None
  type: ClusterIP
