kubernetes/Service__v1_juank1400-dev_identidades.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    app.openshift.io/vcs-ref: ""
    app.openshift.io/vcs-uri: https://github.com/soft-25-01-g4/reto2.git
    openshift.io/generated-by: OpenShiftWebConsole
  labels:
    app: identidades
    app.kubernetes.io/component: identidades
    app.kubernetes.io/instance: identidades
    app.kubernetes.io/name: identidades
    app.kubernetes.io/part-of: reto-2
  name: identidades
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: identidades
    deployment: identidades
  sessionAffinity: None
  type: ClusterIP
