kubernetes/Service__v1_juank1400-dev_notebook.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: notebook
    template.openshift.io/template-instance-owner: 23a5056b-9502-4c21-b020-b1c63e40c3fc
  name: notebook
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  - name: 8081-tcp
    port: 8081
    protocol: TCP
    targetPort: 8081
  selector:
    app: notebook
    deploymentconfig: notebook
  sessionAffinity: None
  type: ClusterIP
