kubernetes/Service__v1_juank1400-dev_router.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    app.openshift.io/connects-to: '[{"apiVersion":"apps/v1","kind":"Deployment","name":"identidades"}]'
    app.openshift.io/vcs-ref: ""
    app.openshift.io/vcs-uri: https://github.com/soft-25-01-g4/reto2.git
    openshift.io/generated-by: OpenShiftWebConsole
  labels:
    app: router
    app.kubernetes.io/component: router
    app.kubernetes.io/instance: router
    app.kubernetes.io/name: router
    app.kubernetes.io/part-of: reto-2
  name: router
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: router
    deployment: router
  sessionAffinity: None
  type: ClusterIP
