kubernetes/Route_route.openshift.io_v1_juank1400-dev_notebook.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: "true"
  labels:
    app: notebook
    template.openshift.io/template-instance-owner: 23a5056b-9502-4c21-b020-b1c63e40c3fc
  name: notebook
spec:
  port:
    targetPort: 8080-tcp
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: notebook
    weight: 100
  wildcardPolicy: None
