kubernetes/Route_route.openshift.io_v1_juank1400-dev_router.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    app.openshift.io/connects-to: '[{"apiVersion":"apps/v1","kind":"Deployment","name":"identidades"}]'
    app.openshift.io/vcs-ref: ""
    app.openshift.io/vcs-uri: https://github.com/soft-25-01-g4/reto2.git
    openshift.io/generated-by: OpenShiftWebConsole
    openshift.io/host.generated: "true"
  labels:
    app: router
    app.kubernetes.io/component: router
    app.kubernetes.io/instance: router
    app.kubernetes.io/name: router
    app.kubernetes.io/part-of: reto-2
  name: router
spec:
  port:
    targetPort: 8080-tcp
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: router
    weight: 100
  wildcardPolicy: None
